--- a/frontend/src/app/components/aboutus/aboutus.component.html
+++ b/frontend/src/app/components/aboutus/aboutus.component.html
@@ -7,14 +7,20 @@
     <div class="container py-5">
       <div class="row h-100 align-items-center py-5">
         <div class="col-lg-6">
-          <h1 class="display-4">About us page</h1>
-          <p class="lead text-muted mb-0">Create a minimal about us page using Bootstrap 4.</p>
-          <p class="lead text-muted">Snippet by <a href="https://bootstrapious.com/snippets" class="text-muted">
-              <u>Bootstrapious</u></a>
-          </p>
+          <h1 class="display-4">Who are We ?</h1>
+          <p class="lead text-muted"><span style="color: #c04f1d; font-weight: bold;">Jurassic Treasure</span> is the <strong>world's
+              largest</strong> online  <strong>fossils ,minerals & meteorites store</strong>,<strong>&nbsp;</strong>unrivaled as the
+            <strong>most&nbsp;reputable source</strong> for <strong>authentic fossils ,minerals & meteorites specimens.</strong>&nbsp;We are the
+            only leading online fossils ,minerals & meteorites  store&nbsp;<strong>owned</strong> by an <strong>accredited paleontology
+              expert</strong>. 
+              
+              <!-- In addition, we have extraordinary <a
+              href="https://www.jurassic-dreams.com/collections/meteorites" target="_blank" title="Authentic meteorites"
+              rel="noopener noreferrer">authentic meteorites</a> specimens from all over the universe.</p> -->
+
         </div>
-        <div class="col-lg-6 d-none d-lg-block"><img src="https://bootstrapious.com/i/snippets/sn-about/illus.png"
-            alt="" class="img-fluid"></div>
+        <div class="col-lg-6 d-none d-lg-block"><img src="../../../assets/img/logoo.png" width="540px" alt=""> 
+            </div>
       </div>
     </div>
   </div>
@@ -61,9 +67,11 @@
               class="img-fluid rounded-circle mb-3 img-thumbnail shadow-sm">
             <h5 class="mb-0">Manuella Nevoresky</h5><span class="small text-uppercase text-muted">CEO - Founder</span>
             <ul class="social mb-0 list-inline mt-3">
-              <li class="list-inline-item"><a routerLink="" class="social-link"><i class="fab fa-facebook-f"></i></a></li>
+              <li class="list-inline-item"><a routerLink="" class="social-link"><i class="fab fa-facebook-f"></i></a>
+              </li>
               <li class="list-inline-item"><a routerLink="" class="social-link"><i class="fab fa-twitter"></i></a></li>
-              <li class="list-inline-item"><a routerLink="" class="social-link"><i class="fab fa-instagram"></i></a></li>
+              <li class="list-inline-item"><a routerLink="" class="social-link"><i class="fab fa-instagram"></i></a>
+              </li>
               <li class="list-inline-item"><a routerLink="" class="social-link"><i class="fab fa-linkedin"></i></a></li>
             </ul>
           </div>
@@ -77,9 +85,11 @@
               class="img-fluid rounded-circle mb-3 img-thumbnail shadow-sm">
             <h5 class="mb-0">Samuel Hardy</h5><span class="small text-uppercase text-muted">CEO - Founder</span>
             <ul class="social mb-0 list-inline mt-3">
-              <li class="list-inline-item"><a routerLink="" class="social-link"><i class="fab fa-facebook-f"></i></a></li>
+              <li class="list-inline-item"><a routerLink="" class="social-link"><i class="fab fa-facebook-f"></i></a>
+              </li>
               <li class="list-inline-item"><a routerLink="" class="social-link"><i class="fab fa-twitter"></i></a></li>
-              <li class="list-inline-item"><a routerLink="" class="social-link"><i class="fab fa-instagram"></i></a></li>
+              <li class="list-inline-item"><a routerLink="" class="social-link"><i class="fab fa-instagram"></i></a>
+              </li>
               <li class="list-inline-item"><a routerLink="" class="social-link"><i class="fab fa-linkedin"></i></a></li>
             </ul>
           </div>
@@ -93,9 +103,11 @@
               class="img-fluid rounded-circle mb-3 img-thumbnail shadow-sm">
             <h5 class="mb-0">Tom Sunderland</h5><span class="small text-uppercase text-muted">CEO - Founder</span>
             <ul class="social mb-0 list-inline mt-3">
-              <li class="list-inline-item"><a routerLink="" class="social-link"><i class="fab fa-facebook-f"></i></a></li>
+              <li class="list-inline-item"><a routerLink="" class="social-link"><i class="fab fa-facebook-f"></i></a>
+              </li>
               <li class="list-inline-item"><a routerLink="" class="social-link"><i class="fab fa-twitter"></i></a></li>
-              <li class="list-inline-item"><a routerLink="" class="social-link"><i class="fab fa-instagram"></i></a></li>
+              <li class="list-inline-item"><a routerLink="" class="social-link"><i class="fab fa-instagram"></i></a>
+              </li>
               <li class="list-inline-item"><a routerLink="" class="social-link"><i class="fab fa-linkedin"></i></a></li>
             </ul>
           </div>
@@ -111,11 +123,12 @@
             <ul class="social mb-0 list-inline mt-3">
               <li class="list-inline-item"><a routerLink="" class=""><i class="fab fa-facebook-f"></i></a></li>
               <li class="list-inline-item"><a routerLink="" class="social-link"><i class="fab fa-twitter"></i></a></li>
-              <li class="list-inline-item"><a routerLink="" class="social-link"><i class="fab fa-instagram"></i></a></li>
+              <li class="list-inline-item"><a routerLink="" class="social-link"><i class="fab fa-instagram"></i></a>
+              </li>
               <li class="list-inline-item"><a routerLink="" class="social-link"><i class="fab fa-linkedin"></i></a></li>
             </ul>
           </div>
-          
+
         </div>
         <!-- End-->
 
