--- a/frontend/src/assets/css/style.css
+++ b/frontend/src/assets/css/style.css
@@ -54,6 +54,9 @@ Table OF Contents
 /*----------------------------*\
 	Typography
 \*----------------------------*/
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
 
 body {
   font-family: 'Montserrat', sans-serif;
