--- a/frontend/src/app/components/contactus/contactus.component.html
+++ b/frontend/src/app/components/contactus/contactus.component.html
@@ -4,7 +4,7 @@
 <div class="mt-2 ">
     <div class="text-center">
         <h3 class="text-primary">How Can We Help You?</h3>
-        <p class="lead">Lorem ipsum, dolor sit amet consectetur adipisic</p>
+       <!--  <p class="lead">Lorem ipsum, dolor sit amet consectetur adipisic</p> -->
     </div>
     <div class=" d-flex align-items-center justify-content-center">
         <div class="bg-white col-md-9">
