--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -4,3 +4,6 @@
 /* importing Bootstrap */
 @import url("./assets/css/bootstrap.min.css");
 /* @import "~ngx-toastr/toastr.css"; */
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
