--- a/frontend/src/app/components/checkout/checkout.component.html
+++ b/frontend/src/app/components/checkout/checkout.component.html
@@ -163,7 +163,7 @@
           I've read and accept the <a href="#">terms & conditions</a>
         </label>
       </div>
-      <button type="submit" class="btn-outline-danger btn btn-lg my-2 btn-block my-5 py-4" [disabled]="cartTotal <= 0 " (click)="onCheckout()">Place order</button>
+      <button type="submit" class="btn-outline-danger btn btn-lg my-2 btn-block order-submit my-5 py-4" [disabled]="cartTotal <= 0 " (click)="onCheckout()">Place order</button>
     </div>
     <!-- /Order Details -->
   </div>
