--- a/frontend/src/app/components/checkout/checkout.component.html
+++ b/frontend/src/app/components/checkout/checkout.component.html
@@ -175,5 +175,5 @@
 
 <div class="text-center my-5" *ngIf="cartData.total <= 0">
   <h4>Your Cart Is Empty</h4>
-  <button class="btn btn-primary btn-lg mt-3" routerLink="/home">GO TO SHOP haha</button>
+  <button class="btn btn-primary btn-lg mt-3" routerLink="/">GO TO SHOP</button>
 </div>
