--- a/frontend/src/app/components/product/product.component.html
+++ b/frontend/src/app/components/product/product.component.html
@@ -1,1 +1,141 @@
-<p>product works!</p>
+<div class="section">
+    <!-- container -->
+    <div class="container">
+        <!-- row -->
+        <div class="row">
+            <!-- Product main img -->
+            <div class="col-md-5 col-md-push-2">
+                <div id="product-main-img" class="slick-initialized slick-slider"><button class="slick-prev slick-arrow" aria-label="Previous" type="button" style="display: block;">Previous</button>
+                    <div class="slick-list draggable"><div class="slick-track" style="opacity: 1; width: 1496px;"><div class="product-preview slick-slide slick-current slick-active" data-slick-index="0" aria-hidden="false" tabindex="0" style="width: 374px; position: relative; left: 0px; top: 0px; z-index: 999; opacity: 1; overflow: hidden;">
+                        <img src="./img/product01.png" alt="">
+                    <img role="presentation" src="file:///Users/said/Desktop/electro/img/product01.png" class="zoomImg" style="position: absolute; top: -1.20856px; left: -175.444px; opacity: 0; width: 600px; height: 600px; border: none; max-width: none; max-height: none;"></div><div class="product-preview slick-slide" data-slick-index="1" aria-hidden="true" tabindex="-1" style="width: 374px; position: relative; left: -374px; top: 0px; z-index: 998; opacity: 0; overflow: hidden;">
+                        <img src="./img/product03.png" alt="">
+                    <img role="presentation" src="file:///Users/said/Desktop/electro/img/product03.png" class="zoomImg" style="position: absolute; top: 0px; left: 0px; opacity: 0; width: 600px; height: 600px; border: none; max-width: none; max-height: none;"></div><div class="product-preview slick-slide" data-slick-index="2" aria-hidden="true" tabindex="-1" style="width: 374px; position: relative; left: -748px; top: 0px; z-index: 998; opacity: 0; overflow: hidden;">
+                        <img src="./img/product06.png" alt="">
+                    <img role="presentation" src="file:///Users/said/Desktop/electro/img/product06.png" class="zoomImg" style="position: absolute; top: 0px; left: 0px; opacity: 0; width: 600px; height: 600px; border: none; max-width: none; max-height: none;"></div><div class="product-preview slick-slide" data-slick-index="3" aria-hidden="true" tabindex="-1" style="width: 374px; position: relative; left: -1122px; top: 0px; z-index: 998; opacity: 0; overflow: hidden;">
+                        <img src="./img/product08.png" alt="">
+                    <img role="presentation" src="file:///Users/said/Desktop/electro/img/product08.png" class="zoomImg" style="position: absolute; top: 0px; left: 0px; opacity: 0; width: 600px; height: 600px; border: none; max-width: none; max-height: none;"></div></div></div>
+
+                    
+
+                    
+
+                    
+                <button class="slick-next slick-arrow" aria-label="Next" type="button" style="display: block;">Next</button></div>
+            </div>
+            <!-- /Product main img -->
+
+            <!-- Product thumb imgs -->
+            <div class="col-md-2  col-md-pull-5">
+                <div id="product-imgs" class="slick-initialized slick-slider slick-vertical"><button class="slick-prev slick-arrow" aria-label="Previous" type="button" style="display: block;">Previous</button>
+                    <div class="slick-list draggable" style="height: 465px; padding: 0px;"><div class="slick-track" style="opacity: 1; height: 1860px; transform: translate3d(0px, -366px, 0px);"><div class="product-preview slick-slide slick-cloned" data-slick-index="-4" aria-hidden="true" tabindex="-1" style="width: 122px;">
+                        <img src="./img/product01.png" alt="">
+                    </div><div class="product-preview slick-slide slick-cloned" data-slick-index="-3" aria-hidden="true" tabindex="-1" style="width: 122px;">
+                        <img src="./img/product03.png" alt="">
+                    </div><div class="product-preview slick-slide slick-cloned" data-slick-index="-2" aria-hidden="true" tabindex="-1" style="width: 122px;">
+                        <img src="./img/product06.png" alt="">
+                    </div><div class="product-preview slick-slide slick-cloned slick-active" data-slick-index="-1" aria-hidden="false" tabindex="-1" style="width: 122px;">
+                        <img src="./img/product08.png" alt="">
+                    </div><div class="product-preview slick-slide slick-current slick-active slick-center" data-slick-index="0" aria-hidden="false" tabindex="0" style="width: 122px;">
+                        <img src="./img/product01.png" alt="">
+                    </div><div class="product-preview slick-slide slick-active" data-slick-index="1" aria-hidden="false" tabindex="0" style="width: 122px;">
+                        <img src="./img/product03.png" alt="">
+                    </div><div class="product-preview slick-slide" data-slick-index="2" aria-hidden="true" tabindex="0" style="width: 122px;">
+                        <img src="./img/product06.png" alt="">
+                    </div><div class="product-preview slick-slide" data-slick-index="3" aria-hidden="true" tabindex="-1" style="width: 122px;">
+                        <img src="./img/product08.png" alt="">
+                    </div><div class="product-preview slick-slide slick-cloned slick-center" data-slick-index="4" aria-hidden="true" tabindex="-1" style="width: 122px;">
+                        <img src="./img/product01.png" alt="">
+                    </div><div class="product-preview slick-slide slick-cloned" data-slick-index="5" aria-hidden="true" tabindex="-1" style="width: 122px;">
+                        <img src="./img/product03.png" alt="">
+                    </div><div class="product-preview slick-slide slick-cloned" data-slick-index="6" aria-hidden="true" tabindex="-1" style="width: 122px;">
+                        <img src="./img/product06.png" alt="">
+                    </div><div class="product-preview slick-slide slick-cloned" data-slick-index="7" aria-hidden="true" tabindex="-1" style="width: 122px;">
+                        <img src="./img/product08.png" alt="">
+                    </div></div></div>
+
+                    
+
+                    
+
+                    
+                <button class="slick-next slick-arrow" aria-label="Next" type="button" style="display: block;">Next</button></div>
+            </div>
+            <!-- /Product thumb imgs -->
+
+            <!-- Product details -->
+            <div class="col-md-5">
+                <div class="product-details">
+                    <h2 class="product-name">product name goes here</h2>
+                    <div>
+                        <div class="product-rating">
+                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star-o"></i>
+                        </div>
+                        <a class="review-link" href="#">10 Review(s) | Add your review</a>
+                    </div>
+                    <div>
+                        <h3 class="product-price">$980.00 <del class="product-old-price">$990.00</del></h3>
+                        <span class="product-available">In Stock</span>
+                    </div>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+
+                    <div class="product-options">
+                        <label>
+                            Size
+                            <select class="input-select">
+                                <option value="0">X</option>
+                            </select>
+                        </label>
+                        <label>
+                            Color
+                            <select class="input-select">
+                                <option value="0">Red</option>
+                            </select>
+                        </label>
+                    </div>
+
+                    <div class="add-to-cart">
+                        <div class="qty-label">
+                            Qty
+                            <div class="input-number">
+                                <input type="number">
+                                <span class="qty-up">+</span>
+                                <span class="qty-down">-</span>
+                            </div>
+                        </div>
+                        <button class="add-to-cart-btn"><i class="fa fa-shopping-cart"></i> add to cart</button>
+                    </div>
+
+                    <ul class="product-btns">
+                        <li><a href="#"><i class="fa fa-heart-o"></i> add to wishlist</a></li>
+                        <li><a href="#"><i class="fa fa-exchange"></i> add to compare</a></li>
+                    </ul>
+
+                    <ul class="product-links">
+                        <li>Category:</li>
+                        <li><a href="#">Headphones</a></li>
+                        <li><a href="#">Accessories</a></li>
+                    </ul>
+
+                    <ul class="product-links">
+                        <li>Share:</li>
+                        <li><a href="#"><i class="fab fa-facebook"></i></a></li>
+                        <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+                        <li><a href="#"><i class="fab fa-google-plus"></i></a></li>
+                        <li><a href="#"><i class="fab fa-envelope"></i></a></li>
+                    </ul>
+
+                </div>
+            </div>
+            <!-- /Product details -->
+
+
+        </div>
+        <!-- /row -->
+    </div>
+    <!-- /container -->
+</div>
