--- a/frontend/src/app/components/product/product.component.html
+++ b/frontend/src/app/components/product/product.component.html
@@ -7,14 +7,14 @@
             <div class="col-md-5 col-md-push-2">
                 <div id="product-main-img" class="slick-initialized slick-slider"><button class="slick-prev slick-arrow" aria-label="Previous" type="button" style="display: block;">Previous</button>
                     <div class="slick-list draggable"><div class="slick-track" style="opacity: 1; width: 1496px;"><div class="product-preview slick-slide slick-current slick-active" data-slick-index="0" aria-hidden="false" tabindex="0" style="width: 374px; position: relative; left: 0px; top: 0px; z-index: 999; opacity: 1; overflow: hidden;">
-                        <img src="./img/product01.png" alt="">
-                    <img role="presentation" src="file:///Users/said/Desktop/electro/img/product01.png" class="zoomImg" style="position: absolute; top: -1.20856px; left: -175.444px; opacity: 0; width: 600px; height: 600px; border: none; max-width: none; max-height: none;"></div><div class="product-preview slick-slide" data-slick-index="1" aria-hidden="true" tabindex="-1" style="width: 374px; position: relative; left: -374px; top: 0px; z-index: 998; opacity: 0; overflow: hidden;">
-                        <img src="./img/product03.png" alt="">
-                    <img role="presentation" src="file:///Users/said/Desktop/electro/img/product03.png" class="zoomImg" style="position: absolute; top: 0px; left: 0px; opacity: 0; width: 600px; height: 600px; border: none; max-width: none; max-height: none;"></div><div class="product-preview slick-slide" data-slick-index="2" aria-hidden="true" tabindex="-1" style="width: 374px; position: relative; left: -748px; top: 0px; z-index: 998; opacity: 0; overflow: hidden;">
-                        <img src="./img/product06.png" alt="">
-                    <img role="presentation" src="file:///Users/said/Desktop/electro/img/product06.png" class="zoomImg" style="position: absolute; top: 0px; left: 0px; opacity: 0; width: 600px; height: 600px; border: none; max-width: none; max-height: none;"></div><div class="product-preview slick-slide" data-slick-index="3" aria-hidden="true" tabindex="-1" style="width: 374px; position: relative; left: -1122px; top: 0px; z-index: 998; opacity: 0; overflow: hidden;">
-                        <img src="./img/product08.png" alt="">
-                    <img role="presentation" src="file:///Users/said/Desktop/electro/img/product08.png" class="zoomImg" style="position: absolute; top: 0px; left: 0px; opacity: 0; width: 600px; height: 600px; border: none; max-width: none; max-height: none;"></div></div></div>
+                        <img src="../../../assets/img/product01.png" alt="">
+                    <img role="presentation" src="../../../assets/img/product01.png" class="zoomImg" style="position: absolute; top: -1.20856px; left: -175.444px; opacity: 0; width: 600px; height: 600px; border: none; max-width: none; max-height: none;"></div><div class="product-preview slick-slide" data-slick-index="1" aria-hidden="true" tabindex="-1" style="width: 374px; position: relative; left: -374px; top: 0px; z-index: 998; opacity: 0; overflow: hidden;">
+                        <img src="../../../assets/img/product03.png" alt="">
+                    <img role="presentation" src="../../../assets/img/product03.png" class="zoomImg" style="position: absolute; top: 0px; left: 0px; opacity: 0; width: 600px; height: 600px; border: none; max-width: none; max-height: none;"></div><div class="product-preview slick-slide" data-slick-index="2" aria-hidden="true" tabindex="-1" style="width: 374px; position: relative; left: -748px; top: 0px; z-index: 998; opacity: 0; overflow: hidden;">
+                        <img src="../../../assets/img/product06.png" alt="">
+                    <img role="presentation" src="../../../assets/img/product06.png" class="zoomImg" style="position: absolute; top: 0px; left: 0px; opacity: 0; width: 600px; height: 600px; border: none; max-width: none; max-height: none;"></div><div class="product-preview slick-slide" data-slick-index="3" aria-hidden="true" tabindex="-1" style="width: 374px; position: relative; left: -1122px; top: 0px; z-index: 998; opacity: 0; overflow: hidden;">
+                        <img src="../../../assets/img/product08.png" alt="">
+                    <img role="presentation" src="../../../assets/img/product08.png" class="zoomImg" style="position: absolute; top: 0px; left: 0px; opacity: 0; width: 600px; height: 600px; border: none; max-width: none; max-height: none;"></div></div></div>
 
                     
 
@@ -29,29 +29,29 @@
             <div class="col-md-2  col-md-pull-5">
                 <div id="product-imgs" class="slick-initialized slick-slider slick-vertical"><button class="slick-prev slick-arrow" aria-label="Previous" type="button" style="display: block;">Previous</button>
                     <div class="slick-list draggable" style="height: 465px; padding: 0px;"><div class="slick-track" style="opacity: 1; height: 1860px; transform: translate3d(0px, -366px, 0px);"><div class="product-preview slick-slide slick-cloned" data-slick-index="-4" aria-hidden="true" tabindex="-1" style="width: 122px;">
-                        <img src="./img/product01.png" alt="">
+                        <img src="../../../assets/img/product01.png" alt="">
                     </div><div class="product-preview slick-slide slick-cloned" data-slick-index="-3" aria-hidden="true" tabindex="-1" style="width: 122px;">
-                        <img src="./img/product03.png" alt="">
+                        <img src="../../../assets/img/product03.png" alt="">
                     </div><div class="product-preview slick-slide slick-cloned" data-slick-index="-2" aria-hidden="true" tabindex="-1" style="width: 122px;">
-                        <img src="./img/product06.png" alt="">
+                        <img src="../../../assets/img/product06.png" alt="">
                     </div><div class="product-preview slick-slide slick-cloned slick-active" data-slick-index="-1" aria-hidden="false" tabindex="-1" style="width: 122px;">
-                        <img src="./img/product08.png" alt="">
+                        <img src="../../../assets/img/product08.png" alt="">
                     </div><div class="product-preview slick-slide slick-current slick-active slick-center" data-slick-index="0" aria-hidden="false" tabindex="0" style="width: 122px;">
-                        <img src="./img/product01.png" alt="">
+                        <img src="../../../assets/img/product01.png" alt="">
                     </div><div class="product-preview slick-slide slick-active" data-slick-index="1" aria-hidden="false" tabindex="0" style="width: 122px;">
-                        <img src="./img/product03.png" alt="">
+                        <img src="../../../assets/img/product03.png" alt="">
                     </div><div class="product-preview slick-slide" data-slick-index="2" aria-hidden="true" tabindex="0" style="width: 122px;">
-                        <img src="./img/product06.png" alt="">
+                        <img src="../../../assets/img/product06.png" alt="">
                     </div><div class="product-preview slick-slide" data-slick-index="3" aria-hidden="true" tabindex="-1" style="width: 122px;">
-                        <img src="./img/product08.png" alt="">
+                        <img src="../../../assets/img/product08.png" alt="">
                     </div><div class="product-preview slick-slide slick-cloned slick-center" data-slick-index="4" aria-hidden="true" tabindex="-1" style="width: 122px;">
-                        <img src="./img/product01.png" alt="">
+                        <img src="../../../assets/img/product01.png" alt="">
                     </div><div class="product-preview slick-slide slick-cloned" data-slick-index="5" aria-hidden="true" tabindex="-1" style="width: 122px;">
-                        <img src="./img/product03.png" alt="">
+                        <img src="../../../assets/img/product03.png" alt="">
                     </div><div class="product-preview slick-slide slick-cloned" data-slick-index="6" aria-hidden="true" tabindex="-1" style="width: 122px;">
-                        <img src="./img/product06.png" alt="">
+                        <img src="../../../assets/img/product06.png" alt="">
                     </div><div class="product-preview slick-slide slick-cloned" data-slick-index="7" aria-hidden="true" tabindex="-1" style="width: 122px;">
-                        <img src="./img/product08.png" alt="">
+                        <img src="../../../assets/img/product08.png" alt="">
                     </div></div></div>
 
                     
