--- a/frontend/src/app/components/home/home.component.html
+++ b/frontend/src/app/components/home/home.component.html
@@ -76,7 +76,7 @@
                   <img [src]="p.image" alt="{{p.name}}" width="300px" height="300px" (click)="selectProduct(p.id)"
                     class="card-img-top" style="cursor:pointer;">
                 </div>
-
+      
                 <div class="card-body">
                   <h5 class="card-title" style="cursor:pointer;" (click)="selectProduct(p.id)">{{p.Name.substr(0,19)}}
                   </h5>
@@ -89,18 +89,17 @@
                       [disabled]="p.quantity < 1" class="btn btn-primary ">{{ p.quantity < 1 ? "NO STOCK"
                         : "Add To Cart" }}</button>
                   </div>
-
                 </div>
               </div>
             </div>
-
-
           </div>
-
         </div>
-        <mat-paginator [length]="100" [pageSize]="10" [pageSizeOptions]="[5, 10, 25, 100]" aria-label="Select page">
-        </mat-paginator>
+        <!-- home.component.html -->
+<mat-paginator [length]="products.totalCount" [pageSize]="pageSize" [pageSizeOptions]="[5, 10, 25, 100]"
+(page)="onPageChange($event)" aria-label="Select page">
+</mat-paginator>
       </div>
+      
 
     </div>
 
